--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://talisman-nav.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://11fbfab1-f3d2-4fad-bbae-259f9470aaca.preview.emergentagent.com
 WDS_SOCKET_PORT=443
